crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_add_bos_true.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: "format!(\"add_bos={}\", cfg.add_bos)"
---
add_bos=true
