crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_creative_json.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: cfg
---
{
  "max_new_tokens": 256,
  "temperature": 0.9,
  "top_k": 100,
  "top_p": 0.95,
  "repetition_penalty": 1.1,
  "stop_sequences": [],
  "stop_token_ids": [],
  "stop_string_window": 64,
  "seed": null,
  "skip_special_tokens": true,
  "eos_token_id": null,
  "logits_tap_steps": 0,
  "logits_topk": 10,
  "add_bos": false
}
