crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_eos_token_id.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: "format!(\"eos_token_id={:?}\", cfg.eos_token_id)"
---
eos_token_id=Some(128001)
