crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_skip_special_default.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: "format!(\"skip_special_tokens={}\", cfg.skip_special_tokens)"
---
skip_special_tokens=true
