crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_stop_sequences.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: "format!(\"{:?}\", cfg.stop_sequences)"
---
["</s>", "\n\nQ:"]
