crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_stop_token_ids.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: "format!(\"{:?}\", cfg.stop_token_ids)"
---
[128009, 128001, 2]
