crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_stop_window_custom.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: "format!(\"{}\", cfg.stop_string_window)"
---
256
