crates/bitnet-inference/tests/snapshots/snapshot_generation_config__gen_config_validate_ok.snap
---
source: crates/bitnet-inference/tests/snapshot_generation_config.rs
expression: "format!(\"{result:?}\")"
---
Ok(())
